# vitesse-tauri-lite

./: README.md  auto-imports.d.ts  components.d.ts  package.json  pnpm-lock.yaml  tsconfig.web.json  vite.config.js  vue.config.js
src/: App.vue  main.css  main.ts  routes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Counter.vue
src/composables/: useJsonStorage.ts  useMyCounter.ts
src/views/: Hey.vue  Index.vue
